improved z-indexing fixes

--- a/src/styles/Button.module.css
+++ b/src/styles/Button.module.css
@@ -11,6 +11,7 @@
 }
 
 .ruio-btn-secondary {
+  z-index: 9990;
   width: 34px;
   height: 34px;
   border-radius: 10px;
